Add tests for Array and Maybe

--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
   "author": "Abraham White <abelincoln.white@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^23.3.12",
+    "fast-check": "^1.10.0",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
