--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Functional (Haskell style) programming in typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "build": "tsc -p ./tsconfig.build.json",
+    "clean": "rm -r build",
+    "cov": "run-s cov:html && xdg-open coverage/index.html",
+    "cov:html": "jest --coverage --coverageReporters='html'",
+    "cov:check": "jest --coverage"
   },
   "keywords": [
     "functional",
@@ -19,6 +25,7 @@
     "@types/jest": "^23.3.12",
     "fast-check": "^1.10.0",
     "jest": "^23.6.0",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
   },
