--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!**/node_modules/**",
+      "!**/*.helper.*",
+      "!**/*.spec.*"
+    ]
   }
 }
